# llmBootcamp

./: .gitignore
homeworks/: .env
homeworks/aillm_week_05_homework_soluiton/: week5_homework_answer.md
homeworks/aillm_week_05_homework_soluiton/week05_answer/: .env  main.py  pyproject.toml
homeworks/aillm_week_05_homework_soluiton/week05_answer/app/: llm_chain.py
homeworks/aillm_week_05_homework_soluiton/week05_answer/logs/: outputs.jsonl
homeworks/hw5/: README.md  app.py  week5_homework_instructions.md
homeworks/hw6/: README.md  Rag Eu Ai Report.docx  eu_ai_act_texts.txt  ingest_texts.py  playwright_scraper.py  rag_eu_ai.py  requirements.tx
week05/: .env  00_install_wsl.md  frequire.txt  requirements.txt
week05/01_basic_setup_simple_example/: README.md  simple_example.py  simple_langchain_llm.ipynb
week05/02_chat_model/: README.md  main.py
week05/03_messages/: README.md  aiMessageChunk.py
week05/04_chat_history/: README.md  main.py
week05/05_tools/: README.md  main.py  main2_hub.py
week05/06_tool_calling/: README.md  main.py
week05/07_structured_output/: README.md  main.py  pprint_and_json.py
week05/08_memory/: README.md
week05/09_multimodality/: README.md
week05/10_runnable_interface/: README.md
week05/11_streaming/: README.md
week05/12_LCEL/: README.md
week05/13_document_loaders/: README.md
week05/14_retrieval/: README.md
week05/15_text_splitters/: README.md
week05/16_embedding_models/: README.md
week06/: .env  del.txt  env_packages.txt  requirements-lock.txt
week07/: README.md  requirements.txt
(+57 files in other folders)
